--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
         <h1>A+ TUTORIALS - Where Excellence Meets Education!</h1>
 
         <div class="container">
-            <img src="Neeta_maam.jpeg" class="maam">
+            <img src="Neeta_maam.webp" class="maam">
             <p class="founder">A+ tutorials, founded by <br> Mrs. Neeta Mishra, <br> boasts over 18 years of <br> teaching experience and holds <br> 
                 qualifications including N.TT, <br> M.A, and B.Ed. A+ Tutorial <br> provides a uniques opportunity <br> for personalized education, <br> where students can benefit  <br>
                 from Mrs. Neeta Ma'am's expertise <br> and guidance.</p>        
